# SimurghForge

./: .gitignore  .npmrc  .prettierignore  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  IPC_REFERENCE.md  README.md  USAGE.md
docs/plans/: 2026-03-28-engine-overhaul-design.md  2026-03-28-simurgh-forge-design.md  2026-03-28-simurgh-forge-implementation.md
scripts/: pandas_convert.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: convert.rs  mod.rs  router.rs
src-tauri/src/commands/engines/: ffmpeg.rs  imagemagick.rs  libreoffice.rs  mod.rs  pandas.rs  pandoc.rs  rust_audio.rs  rust_data.rs  rust_image.rs  rust_pdf.rs
src-tauri/src/utils/: mime.rs  mod.rs  paths.rs  sanitise.rs
src/components/: DropZone.tsx  FileCard.tsx  FormatSelector.tsx  ProgressBar.tsx  QualityControls.tsx  QueuePanel.tsx  Settings.tsx
src/hooks/: useConversionQueue.ts  useIPCEvents.ts
src/i18n/: strings.ts
src/lib/: formatMap.ts  ipc.ts
src/types/: conversion.ts
