[package]
name = "simurgh-forge"
version = "0.1.0"
description = "Simurgh Forge - Desktop File Converter"
authors = ["Raouf"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.5"
image = "0.25"
ravif = "0.11"
avif-decode = "1"
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"
lopdf = "0.34"
serde_yaml = "0.9"
toml_edit = "0.22"
quick-xml = { version = "0.37", features = ["serialize"] }

[dev-dependencies]
tempfile = "3"
